# code-rag

./: .env.example  .gitignore  PLAN.md  QUICKSTART.md  check_nodes.py  clear_index.py  debug_ast.py  diag2.py  diag_apply_edges.py  diag_callers.py  diag_edge_counts.py  diag_edges.py  diag_index.py  diag_jedi.py  diag_refs.py  diag_verify.py  implementation_plan.md  pyproject.toml  rebuild_fts.py  reset_db.py  reset_db2.py  run_agent_queries.py
cce/: FIX_PLAN.md  IMPROVEMENTS.md  __init__.py  agent_run_20260422_184419.txt  agent_run_20260423_102232.txt  agent_run_20260423_152554.txt  changes.txt  cli.py  config.py  examples.txt  hashing.py  indexer.py  logging.py  telemetry.py  walker.py
cce/agents/: __init__.py  graph.py  llm.py  nodes.py  state.py  tools.py  trace.py
cce/embeddings/: __init__.py  chunker.py  embedder.py
cce/eval/: dataset.py  harness.py  metrics.py
cce/extractors/: __init__.py  api_linker.py  base.py  cli_extractor.py  django_extractor.py  fastapi_extractor.py  framework_detector.py  langgraph_extractor.py  react_extractor.py
cce/graph/: __init__.py  base.py  duckdb_store.py  kuzu_store.py  postgres_store.py  schema.py  sqlite_store.py
cce/index/: __init__.py  db.py  lexical_store.py  symbol_store.py  vector_store.py
cce/parsers/: __init__.py  base.py  js_resolver.py  python_resolver.py  tree_sitter_parser.py
cce/retrieval/: __init__.py  hybrid.py  tools.py
cce/scip/: __init__.py  (+2 more)
docs/: README.md  api-reference.md  architecture.md  cli-reference.md  configuration.md  setup.md
logs/: agent_trace.jsonl
tests/: conftest.py  test_phase10_watcher.py  test_phase11_scip.py  test_phase12_eval.py  test_phase1_walker.py  test_phase2_lexical.py  test_phase3_symbols.py  test_phase4_resolver.py  test_phase5_graph.py  test_phase6_django.py  test_phase6_fastapi.py  test_phase6_react.py  test_phase7_semantic.py  test_phase8_hybrid.py  test_phase9_agent.py  test_phase_framework_completeness.py  test_phase_multi_repo.py  test_scaffolding.py
(+29 files in other folders)
